src/objects/Part_Request_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Part_Request__c</fullName>
        <label>Part Request</label>
        <referenceTo>Part_Request__c</referenceTo>
        <relationshipLabel>Part Request Line Items</relationshipLabel>
        <relationshipName>Part_Request_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.APTS_Material_Type__c</field>
                <operation>equals</operation>
                <value>ZSPR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Part Request Line Items</relationshipLabel>
        <relationshipName>Part_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <formula>Part_Request__r.Sales_Organization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Organization</label>
        <type>Text</type>
    </fields>
    <label>Part Request Line Item</label>
    <nameField>
        <displayFormat>PRLI-{00000}</displayFormat>
        <label>Part Request Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part Request Line Items</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TS_MinimumQuantity</fullName>
        <active>true</active>
        <description>Minimum quantity is 1.</description>
        <errorConditionFormula>IF($Setup.ValidationRulesSettings__c.PartRequestLineItemValidationRules__c,  OR(Quantity__c  &lt; 1,  ISBLANK(Quantity__c)),
FALSE)</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Minimum quantity is 1.</errorMessage>
    </validationRules>
</CustomObject>